--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flipkart clone by selva</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/utile.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="utile.css">
+    <link rel="stylesheet" href="responsive.css">
 
     <style>
         /* Style The Dropdown Button */
