--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             
             <div class="search-icon">
-              <button class="s">  <img src="img/search-icon.png" alt="" class="search-icon1"></button>
+              <button class="s">  <img src="search-icon.png" alt="" class="search-icon1"></button>
             </div>
             <ul>
                 <li><a href="sighn up.html">Sign up</a></li>
@@ -129,7 +129,7 @@
 
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 3</div>
-                    <img src="img/e.jpg" style="width:1000px; height: 50vh;">
+                    <img src="e.jpg" style="width:1000px; height: 50vh;">
                     <div class="text">Caption Three</div>
                 </div>
 
